--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6"> 
-                    <h1 id="header-title">Item Lister</h1>
+                    <h1 id="header-title">Item <span data-wait="300" data-words='["Lister", "Manager", "Tracker"]'></span></h1>
                 </div>
                 <div class="col-md-6 align-self-center">
                     <input type="text" class="form-control" id="filter" placeholder="Search Items...">
